[metadata]
name = bandbox
version = 0.2.2
description = Bandbox is a CLI tool to quickly assess how organised your data is
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/paulkorir/bandbox
license = Apache 2.0
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools
install_requires =
    requests
    styled
packages = find:

;[options.package_data]
;jobmanager = conf/cli.conf, conf/starters.conf, conf/web.conf, web/static/web/css/*.css, web/static/web/img/*.png, web/static/web/js/jobmanager/build/*, web/templates/web/dashboard/*.html, web/templates/web/stock/*.html, web/static/web/favicon.ico

[options.entry_points]
console_scripts =
    bandbox = bandbox.main:main
